--- a/WebApp/Views/Coupon/CouponIndex.cshtml
+++ b/WebApp/Views/Coupon/CouponIndex.cshtml
@@ -13,7 +13,7 @@
             <div class="col-6">
             </div>
             <div class="col-6 text-end">
-                <a class="btn btn-outline-primary"><i class="bi bi-plus-square"></i> Create New Coupon</a>
+                <a asp-action="CouponCreate" class="btn btn-outline-primary"><i class="bi bi-plus-square"></i> Create New Coupon</a>
 
             </div>
         </div>
@@ -40,7 +40,7 @@
                         <td>@((item.DiscountAmount).ToString("c"))</td>
                         <td>@((item.MinAmount).ToString("c"))</td>
                         <td>
-                            <a class="btn btn-danger">
+                            <a asp-action="CouponDelete" asp-route-couponId="@item.CouponId" class="btn btn-danger">
                                 <i class="bi bi-trash"></i>
                             </a>
                         </td>
