--- a/WebApp/Views/Cart/CartIndex.cshtml
+++ b/WebApp/Views/Cart/CartIndex.cshtml
@@ -35,7 +35,6 @@
                         </div>
                     </div>
                     <hr />
-
                     @foreach (var cartObj in Model.CartDetails)
                     {
                         <div class="row h-100">
@@ -89,7 +88,7 @@
                         <button type="submit" class="btn btn-outline-danger form-control">Email Cart</button>
                     </div>
                     <div class="col-6 col-md-3 offset-md-6">
-                        <a asp-action="Checkout" class="btn btn-success form-control">Looks Good? </a>
+                        <a asp-action="CheckOut" class="btn btn-success form-control">Looks Good?</a>
                     </div>
                 </div>
             </div>
