--- a/WebApp/Views/Product/ProductEdit.cshtml
+++ b/WebApp/Views/Product/ProductEdit.cshtml
@@ -41,10 +41,10 @@
                         <label class="control-label pt-2" style="font-size:20px;">ImageUrl</label>
                     </div>
                     <div class="col-10 pb-3">
-                        @* <input asp-for="Image" class="form-control" /> *@
+                        <input asp-for="Image" class="form-control" />
                         <input asp-for="ImageUrl" hidden class="form-control" />
-                        @* <input asp-for="ImageLocalPath" hidden class="form-control" /> *@
-                        @* <span asp-validation-for="Image" class="text-danger"></span> *@
+                        <input asp-for="ImageLocalPath" hidden class="form-control" />
+                        <span asp-validation-for="Image" class="text-danger"></span>
                     </div>
                     <div class="col-5 offset-2">
                         <a asp-action="ProductIndex" class="btn-primary btn form-control ">Back to List</a>
